Added swagger config for kpidemascotas method. Added lowercase method to Pet to assure the case of the struct fields on pet creation
